# geomemo

./: LICENSE  README.md  app.py  pyproject.toml
data/: visited.sqlite3
public/: app.js  index.html  styles.css
